--- a/www/css/bootstrap.css
+++ b/www/css/bootstrap.css
@@ -2312,7 +2312,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ddd;
+  border: 1px solid clear;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
@@ -2503,6 +2503,7 @@ legend {
   font-size: 21px;
   line-height: inherit;
   color: #333;
+    
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
